trunk/Archive2/35/156f26efd1ec1b/output
main.cpp:2:1: error: stray '\' in program
 In file included from C:\Project\CGame.h:9:0,
 ^
main.cpp:2:1: error: stray '\' in program
main.cpp:3:18: error: stray '\' in program
                  from C:\Project\CEnemy.h:3,
                  ^
main.cpp:3:18: error: stray '\' in program
main.cpp:4:18: error: stray '\' in program
                  from C:\Project\CEnemy.cpp:1:
                  ^
main.cpp:4:18: error: stray '\' in program
main.cpp:5:1: error: stray '\' in program
 C:\Project\CEnemyHealth.h:11:16: error: field 'cenemy1' has incomplete type
 ^
main.cpp:5:1: error: stray '\' in program
main.cpp:5:47: warning: character constant too long for its type
 C:\Project\CEnemyHealth.h:11:16: error: field 'cenemy1' has incomplete type
                                               ^
main.cpp:10:20: fatal error: CEnemy.h: No such file or directory
 #include "CEnemy.h"
                    ^
compilation terminated.
